--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">RecipesApp</string>
     <string name="recipe_hub">Recipe Hub</string>
+    <string name="welcome">Welcome to Recipe Hub</string>
 </resources>
